--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "An example for Mutation Testing",
   "repository": {
     "type": "git",
-    "url": "https://github.com/stryker-mutator/robobar-example"
+    "url": "https://github.com/ravelinx22/robobar-example"
   },
   "main": "index.js",
   "scripts": {
     "test": "karma start",
-    "start": "lite-server",
-    "stryker": "stryker run"
+    "start": "lite-server"
   },
   "keywords": [],
   "author": "",
@@ -30,12 +29,6 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-jasmine": "^1.1.2",
-    "lite-server": "^2.4.0",
-    "stryker": "^0.29.2",
-    "stryker-api": "^0.21.1",
-    "stryker-html-reporter": "^0.16.2",
-    "stryker-jasmine": "^0.10.2",
-    "stryker-javascript-mutator": "^0.10.0",
-    "stryker-karma-runner": "^0.18.1"
+    "lite-server": "^2.4.0"
   }
 }
